# project1

./: CMakeLists.txt
sapi_sales/headers/manager/: lab2.h  lab_manager.h
sapi_sales/headers/models/: product.h  user.h
sapi_sales/src/manager/: lab2.c  lab_manager.c
sapi_sales/src/models/: product.c  user.c
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c
